test/NUITestSample/NUIUbuntuTest/tizenfx-stub-devel-master/src/app_info.h


typedef struct app_info_s *app_info_h;
typedef struct app_info_filter_s *app_info_filter_h;
typedef bool (*app_info_filter_cb) (app_info_h app_info, void *user_data);
typedef bool (*app_info_metadata_cb) (const char *metadata_key, const char *metadata_value, void *user_data);
int app_info_create(const char *app_id, app_info_h *app_info);
int app_info_destroy(app_info_h app_info);
int app_info_get_app_id(app_info_h app_info, char **app_id);
int app_info_get_exec(app_info_h app_info, char **exec);
int app_info_get_label(app_info_h app_info, char **label);
int app_info_get_localed_label(const char *app_id, const char *locale, char **label);
int app_info_get_icon(app_info_h app_info, char **path);
int app_info_get_package(app_info_h app_info, char **package);
int app_info_get_type(app_info_h app_info, char **type);
int app_info_foreach_metadata(app_info_h app_info, app_info_metadata_cb callback, void *user_data);
int app_info_is_nodisplay(app_info_h app_info, bool *nodisplay);
int app_info_is_equal(app_info_h lhs, app_info_h rhs, bool *equal);
int app_info_is_enabled(app_info_h app_info, bool *enabled);
int app_info_is_onboot(app_info_h app_info, bool *onboot);
int app_info_is_preload(app_info_h app_info, bool *preload);
int app_info_clone(app_info_h *clone, app_info_h app_info);
int app_info_filter_create(app_info_filter_h *handle);
int app_info_filter_destroy(app_info_filter_h handle);
int app_info_filter_add_bool(app_info_filter_h handle, const char *property, const bool value);