test/NUITestSample/NUIUbuntuTest/tizenfx-stub-devel-master/src/app_manager.h


typedef void (*app_manager_app_context_event_cb) (app_context_h app_context, app_context_event_e event, void *user_data);
typedef bool (*app_manager_app_context_cb) (app_context_h app_context, void *user_data);
typedef bool (*app_manager_app_info_cb) (app_info_h app_info, void *user_data);
int app_manager_set_app_context_event_cb(app_manager_app_context_event_cb callback, void *user_data);
void app_manager_unset_app_context_event_cb(void);
int app_manager_foreach_app_context(app_manager_app_context_cb callback, void *user_data);
int app_manager_get_app_context(const char *app_id, app_context_h *app_context);
int app_manager_get_app_id(pid_t pid, char **app_id);
int app_manager_is_running(const char *app_id, bool *running);
int app_manager_resume_app(app_context_h app_context);
int app_manager_request_terminate_bg_app(app_context_h app_context);
int app_manager_foreach_app_info(app_manager_app_info_cb callback, void *user_data);
int app_manager_get_app_info(const char *app_id, app_info_h *app_info);
int app_manager_get_shared_data_path(const char *app_id, char **path);
int app_manager_get_shared_resource_path(const char *app_id, char **path);
int app_manager_get_shared_trusted_path(const char *app_id, char **path);
int app_manager_get_external_shared_data_path(const char *app_id, char **path) TIZEN_DEPRECATED_API;